# vstorage

./: .gitignore  Cargo.toml  Vagrantfile  build.rs  sblock_logger.yml  test_api.py
components/vm_util/: Cargo.toml
components/vm_util/src/: collections.rs
coordinator/: docker-compose.yml
coordinator/app/: app.lua
coordinator/app/api/: tcp_mx.lua
coordinator/app/api/v1/: context.lua  controller.lua
coordinator/app/config/: main.lua
coordinator/app/models/: server.lua
src/: config.rs  lib.rs
src/api/: mod.rs  rest.rs  rpc.rs
src/api/proto/: block_api.proto
src/binutil/: cli_opts.rs  mod.rs  setup.rs
src/cluster/: coordinator.rs  coordinator_api.rs  mod.rs
src/metrics/: mod.rs
src/stora/: api.rs  bucket.rs  disk.rs  gc.rs  meta.rs  mod.rs  status.rs  validator.rs  volume.rs
tests/: Makefile  test_grpc.py  test_rest.py
tests/client/: block_api_pb2.py  block_api_pb2_grpc.py
