[package]
name = "vstorage"
version = "0.1.0"
authors = [
    "Maxim Molchanov <m.molchanov@vonmo.com>"
]
edition = "2018"
publish = false


[dependencies]
vm_util = { path = "components/vm_util" }
cfg-if="0.1.10"
clap="2.33.0"
rust-crypto="0.2.36"
log="0.4.8"
log4rs="0.9.0"
dirs="2.0.2"
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0.44"
serde_derive = "1.0.103"
systemstat="0.1.5"
rocksdb = { version = "0.13.0", default-features = false, features = ["lz4"]}
hyper="0.13.1"
lazy_static="1.4.0"
walkdir="2.2.9"
prometheus="0.7.0"
rmp-serde="0.14.0"
futures-util="0.3.0"
chrono="0.4.10"
uuid = { version = "0.8", features = ["serde", "v4"] }
highway = "0.3.0"
lz4-compress = "0.1.1"
http="0.2.0"
tonic = "0.1.1"
prost = "0.6.1"
bytes="0.5.3"

[build-dependencies]
tonic-build = {git = "https://github.com/hyperium/tonic", branch="master"}

[[bin]]
name = "block-server"

[profile.dev]
rpath = true

#[source.crates-io]
#replace-with = "vendored-sources"
#
#[source.vendored-sources]
#directory = "vendor"